Layout bug fix

--- a/main.css
+++ b/main.css
@@ -53,7 +53,7 @@ img {
     bottom: 0;
     left: 0;
     margin: auto;
-    border-radius: 50px;
+    border-radius: 7vh;
     flex-flow: column;
     transition: 1s;
     box-shadow: #555 0 0 20px;
@@ -76,8 +76,8 @@ img {
 .title{
     position: absolute;
     font-size: 14vw !important;
-    padding-top: 25px;
-    padding-bottom: 25px;
+    padding-top: 2vh;
+    padding-bottom: 2vh;
     top: 16vh;
 }
 
@@ -90,16 +90,12 @@ img {
     height: 15vh;
     width: 50vw;
     margin: 4vh;
-    border-radius: 30px;
-    box-shadow: #666 0 0 20px;
+    border-radius: 3vh;
+    box-shadow: #666 0 0 2vh;
 }
 
 .top-page-buttons button:active{
-    height: 15vh;
-    width: 50vw;
-    margin: 4vh;
-    border-radius: 30px;
-    box-shadow:inset #666 0 0 20px;
+    box-shadow:inset #666 0 0 2vh;
 }
 
 #main{
@@ -166,6 +162,7 @@ img {
     height: 30vw;
     width: 30vw;
     bottom: 3vw;
+    border-radius: 12.5vw;
 }
 
 #rock.notselect{
@@ -179,6 +176,7 @@ img {
     height: 30vw;
     width: 30vw;
     bottom: 3vw;
+    border-radius: 12.5vw;
 }
 
 #scissors.notselect{
@@ -192,6 +190,7 @@ img {
     height: 30vw;
     width: 30vw;
     bottom: 3vw;
+    border-radius: 12.5vw;
 }
 
 #paper.notselect{
@@ -207,35 +206,24 @@ img {
     right: 0;
     top: 0;
     border-radius: 12.5vw;
-    box-shadow: #000 0 0 20px;
+    box-shadow: #000 0 0 2vh;
     transition: 0.2s;
 }
 
 #user-hands img:hover{
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    right: 0;
-    top: 0;
     border-radius: 6.5vw;
-    box-shadow: #000 0 0 20px;
     transition: 0.2s;
 }
 
 #user-hands img:active{
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    right: 0;
-    top: 0;
     border-radius: 6.5vw;
-    box-shadow: #fff 0 0 20px;
+    box-shadow: #fff 0 0 2vh;
 }
 
 #result{
     font-size: 7vw;
     color: rgba(0, 0, 0, 0);
-    padding-bottom: 3vh;
+    padding-bottom: 0vh;
     transition: 0.3s;
 }
 
@@ -270,7 +258,7 @@ img {
 
 #resultblock.finish{
     display: flex;
-    top: 24vh;
+    top: 30vh;
     transition: 0.3s;
 }
 
@@ -282,9 +270,12 @@ img {
 }
 
 #reloadbutton{
-    position: absolute;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
     border-radius: 7.5vh;
-    top: 25vh;
+    top: 7vh;
     height: 15vh;
     width: 15vh;
 	opacity: 0;
@@ -298,9 +289,8 @@ img {
 }
 
 #reloadbuttonimg{
-    position: relative;
-    right: 1.5vw;
-    bottom: 0.125vh;
+    position: absolute;
+    transform: translate(-50%, -50%);
     height: 15vh;
     width: 15vh;
 	opacity: 1;
@@ -318,7 +308,7 @@ img {
     opacity: 0;
     top: 5vh;
     border-radius: 12.5vw;
-    box-shadow: #000 0 0 20px;
+    box-shadow: #000 0 0 2vh;
     transition: 0.3s;
 }
 
